{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 51,
  "lineage": "72b16b15-f99f-cacf-6853-2b50731d44d2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-01T03:58:08.130-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/firm-reef-464609-q5/global/firewalls/allow-firewall",
            "log_config": [],
            "name": "allow-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/networks/demo-vpc",
            "priority": 1000,
            "project": "firm-reef-464609-q5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/firewalls/allow-firewall",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-01T03:58:08.137-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/firm-reef-464609-q5/global/firewalls/allow-ssh-http",
            "log_config": [],
            "name": "allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/networks/demo-vpc",
            "priority": 1000,
            "project": "firm-reef-464609-q5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/firewalls/allow-ssh-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nginvx_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/zones/europe-west1-b/disks/nginx-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-01T06:59:20.492-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/firm-reef-464609-q5/zones/europe-west1-b/instances/nginx-vm",
            "instance_id": "8166552095010215768",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDDQP1QNs5KupS8GMjqGWjvqdbIxzOns837G9cU5LrzfcI0nYQXGFuTfWvfYFYUM5IrmeLdbjsSedpeO6RT2g0CBPRKaHieFdytsnpQJYTlNgVLuDAyxSwKYVCcsdV3G3kIvEprjH8/As35P1Z39cob2UvZy1OYq33cuyphFRjKFyZSX9C1PwyEx0XsaQ55ae6HpyAMqNRc+9AqlZjpBReb8jF2IP6elNGMihOZ0+i3Liqzx7tsmh3kJUGqyrF5AXRes4X5Bf3KrnciSpbHEyqqxzWwUOXKkiUYFLh9dv+2LUJsSSR2RlWqcQ9LApEaVPR5mA+OYsjmksnXsOhgNfcgWZZCRfF0JaYA8Q+vFVUxxBWT13tLqlNzF8WhB6mbVaNsGA9+C6U/lqrH6/tf9qu8WZAT5SzdwhpPaN3IUoj [...]
            },
            "metadata_fingerprint": "H-Tp6MG2Lzg=",
            "metadata_startup_script": "#! /bin/bash\r\napt-get update\r\napt-get install -y nginx\r\nsystemctl start nginx\r\nsystemctl enable nginx\r\n",
            "name": "nginx-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.22.147.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/networks/demo-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/regions/europe-west1/subnetworks/demo-subnet",
                "subnetwork_project": "firm-reef-464609-q5"
              }
            ],
            "project": "firm-reef-464609-q5",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/zones/europe-west1-b/instances/nginx-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "ssh"
            ],
            "tags_fingerprint": "xEi19su0rvw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/firm-reef-464609-q5/global/networks/demo-vpc",
            "mtu": 0,
            "name": "demo-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3429022538377593307",
            "numeric_id": "3429022538377593307",
            "project": "firm-reef-464609-q5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/networks/demo-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-01T03:58:09.932-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/firm-reef-464609-q5/regions/europe-west1/subnetworks/demo-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "demo-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/global/networks/demo-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "firm-reef-464609-q5",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/firm-reef-464609-q5/regions/europe-west1/subnetworks/demo-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7941725237262811566
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}